     of the existing mappings. Suggest how user can help improve the driver
     if too few data points were seen. [#3082, #3095]
   * `cps-hid` updated with Replace Battery information. [PR #3268]
   * `openups-hid` had `nobattery` definition inverted, causing alarms -- now
     fixed to use the same mapping helper as other subdrivers. [issue #3246]
   * Improved handling of transient `LIBUSB_ERROR_IO` failures during polling.
     Some devices (CyberPower, etc.) have firmware bugs causing random I/O
     errors on certain HID reports. The driver now skips failing reports and
     continues polling rather than triggering expensive reconnection attempts.
     True disconnections are still detected via other error codes or when all
     polls fail. [issue #3116]

 - `nut-scanner` tool updates:
   * Fixed `nut-scanner` search for "simulation devices" to not use only the
     built-in NUT configuration path on all platforms, but to also consider
     `NUT_CONFPATH` and other fallback locations, like other code does.
     [PR #3249]

 - `upsd` data server updates:
   * Sometimes "Data for UPS [X] is stale" and "UPS [X] data is no longer
     stale" messages were logged in the same second, especially no busy
     systems. Now we allow one more second on top of `MAXAGE` setting to
     declare the device dead, just in case fractional/whole second rounding
     comes into play and breaks things. [issue #661]
   * Fixed `LISTEN *` handling for `upsd.exe` in NUT for Windows builds.
     [PR #3237]

 - `upsdrvctl` tool updates:
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]

 - `upslog` tool updates:
   * Updated `help()` and failure messages to suggest `-m '*,-'` for logging
     of all known local devices to stdout. [#3083, #2756]

 - `upsmon` client updates:
   * The `SHUTDOWNEXIT` option was not handled properly, and the requested
     long delays did not happen in practice. [issues #2133 and #3084, PR #3086]